--- a/tests.html
+++ b/tests.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test - Aprende Derivadas</title>
+    <title>Tests - Aprende Derivadas</title>
     <!-- Favicons -->
     <link href="assets/img/favicon.ico" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -27,13 +27,13 @@
     <main>
       <div class="container test-container">
         <div class="row d-flex justify-content-center">
-          <div class="card col-md-8 test-card">
+          <div class="card mb-4 col-md-8 test-card">
             <div class="card-body d-flex flex-column">
-              <h2 class="card-title my-4 text-center">Test de Aprende Derivadas</h2>
+              <h2 class="card-title text-center">Test de Aprende Derivadas</h2>
               <div class="card mb-4" style="max-width: 540px;">
                 <div class="row g-0">
-                  <div class="col-md-4">
-                    <img src="assets/img/test/nivel-1.png" class="img-fluid rounded-start" alt="...">
+                  <div class="col-md-4 d-flex justify-content-center">
+                    <img src="assets/img/test/nivel-1.png" class="img-fluid rounded" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -46,22 +46,22 @@
               </div>
               <div class="card mb-4" style="max-width: 540px;">
                 <div class="row g-0">
-                  <div class="col-md-8">
+                  <div class="col-md-4 d-flex justify-content-center order-md-2">
+                    <img src="assets/img/test/nivel-2.png" class="img-fluid rounded" alt="...">
+                  </div>
+                  <div class="col-md-8 order-md-1">
                     <div class="card-body">
                       <h5 class="card-title">Derivadas de una constante</h5>
                       <p class="card-text">La resolución de derivadas parte desde lo más básico.</p>
                       <a href="test-2.html" class="btn btn-outline-primary">Hacer test</a>
                     </div>
                   </div>
-                  <div class="col-md-4">
-                    <img src="assets/img/test/nivel-2.png" class="img-fluid rounded-start" alt="...">
-                  </div>
                 </div>
               </div>
               <div class="card mb-4" style="max-width: 540px;">
                 <div class="row g-0">
-                  <div class="col-md-4">
-                    <img src="assets/img/test/nivel-3.png" class="img-fluid rounded-start" alt="...">
+                  <div class="col-md-4 d-flex justify-content-center">
+                    <img src="assets/img/test/nivel-3.png" class="img-fluid rounded" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -74,22 +74,22 @@
               </div>
               <div class="card mb-4" style="max-width: 540px;">
                 <div class="row g-0">
-                  <div class="col-md-8">
+                  <div class="col-md-4 d-flex justify-content-center order-md-2">
+                    <img src="assets/img/test/nivel-4.png" class="img-fluid rounded" alt="...">
+                  </div>
+                  <div class="col-md-8 order-md-1">
                     <div class="card-body">
                       <h5 class="card-title">Derivadas parciales</h5>
                       <p class="card-text">Eres todo un maestro, estás preparado para el siguiente nivel.</p>
                       <a href="test-4.html" class="btn btn-outline-primary">Hacer test</a>
                     </div>
                   </div>
-                  <div class="col-md-4">
-                    <img src="assets/img/test/nivel-4.png" class="img-fluid rounded-start" alt="...">
-                  </div>
                 </div>
               </div>
               <div class="card mb-4" style="max-width: 540px;">
                 <div class="row g-0">
-                  <div class="col-md-4">
-                    <img src="assets/img/test/nivel-5.png" class="img-fluid rounded-start" alt="...">
+                  <div class="col-md-4 d-flex justify-content-center">
+                    <img src="assets/img/test/nivel-5.png" class="img-fluid rounded" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
