Correccion de links

--- a/index.html
+++ b/index.html
@@ -262,42 +262,20 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
-
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Aprende derivadas</h3>
-            <p>
-              Apure<br>
-              Calle Bolívar, a una cuadra de la plaza Bolívar, San Fernando<br>
-              Venezuela <br>
-            </p>
-          </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Enlaces</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="./index.html">Inicio</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="./about.html">Nosotros</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="./courses.html">Temas</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
+  <footer class="py-3 my-4" id="footer">
+    <div class="container">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Inicio</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Nosotros</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Temas</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Tests</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Calculadora</a></li>
+      </ul>
+      <p class="text-center text-body-secondary border-bottom pb-3 mb-3"> &copy; Aprende Derivadas </p> 
+      <p class="text-center text-body-secondary">UNEFA NUCLEO APURE</p>
     </div>
-
-    <div class="container d-md-flex py-4">
-
-      <div class="me-md-auto text-center text-md-start">
-        <div class="copyright">
-          &copy; <strong><span>Aprender Derivadas</span></strong>. Todos los derechos reservados
-        </div>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
+  </footer>
+  <!-- End Footer -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
