--- a/derivadas-funcionlineal.html
+++ b/derivadas-funcionlineal.html
@@ -79,7 +79,7 @@
               </div>
             </div>
 
-            <br>&nbsp;&nbsp;&nbsp;El término independiente se elimina de la derivada porque la derivada de una constante es igual a cero. Y, por otro lado, la derivada de un término de primer grado es el coeficiente de dicho término. Por lo que la derivada de la suma de estos dos tipos de funciones es el coeficiente del término lineal.</br> 
+            <p>&nbsp;&nbsp;&nbsp;El término independiente se elimina de la derivada porque la derivada de una constante es igual a cero. Y, por otro lado, la derivada de un término de primer grado es el coeficiente de dicho término. Por lo que la derivada de la suma de estos dos tipos de funciones es el coeficiente del término lineal.</p> 
             <div class="row d-flex justify-content-center">
               <div class="col-lg-4">
                 <img src="assets/img/lineal/ejemplo2.jpg" class="img-fluid mt-4" alt="">
@@ -188,48 +188,26 @@
         </div>
 
       </div>
+      <div class="fw-bold text-center mb-4">&nbsp;&nbsp;&nbsp;En conclusión, la derivada de una función lineal es igual al coeficiente del término de primer grado en cualquier punto. Así pues, queda demostrada la fórmula de la derivada de una función lineal.</div>
     </section><!-- End Cource Details Tabs Section -->
-    <div class="fw-bold text-center mb-4">&nbsp;&nbsp;&nbsp;En conclusión, la derivada de una función lineal es igual al coeficiente del término de primer grado en cualquier punto. Así pues, queda demostrada la fórmula de la derivada de una función lineal.</div>
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
-
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Aprende derivadas</h3>
-            <p>
-              Apure<br>
-              Calle Bolívar, a una cuadra de la plaza Bolívar, San Fernando<br>
-              Venezuela <br>
-            </p>
-          </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Enlaces</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="./index.html">Inicio</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="./about.html">Nosotros</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="./courses.html">Temas</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
+  <footer class="py-3 my-4" id="footer">
+    <div class="container">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Inicio</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Nosotros</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Temas</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Tests</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Calculadora</a></li>
+      </ul>
+      <p class="text-center text-body-secondary border-bottom pb-3 mb-3"> &copy; Aprende Derivadas </p> 
+      <p class="text-center text-body-secondary">UNEFA NUCLEO APURE</p>
     </div>
-
-    <div class="container d-md-flex py-4">
-
-      <div class="me-md-auto text-center text-md-start">
-        <div class="copyright">
-          &copy; <strong><span>Aprender Derivadas</span></strong>. Todos los derechos reservados
-        </div>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
+  </footer>
+  <!-- End Footer -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
