Correccion de links 2

--- a/derivadas-parciales.html
+++ b/derivadas-parciales.html
@@ -292,10 +292,10 @@
   <footer class="py-3 my-4" id="footer">
     <div class="container">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Inicio</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Nosotros</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Temas</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Tests</a></li>
+        <li class="nav-item"><a href="index.html" class="nav-link px-2 text-secondary">Inicio</a></li>
+        <li class="nav-item"><a href="about.html" class="nav-link px-2 text-secondary">Nosotros</a></li>
+        <li class="nav-item"><a href="courses.html" class="nav-link px-2 text-secondary">Temas</a></li>
+        <li class="nav-item"><a href="tests.html" class="nav-link px-2 text-secondary">Tests</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Calculadora</a></li>
       </ul>
       <p class="text-center text-body-secondary border-bottom pb-3 mb-3"> &copy; Aprende Derivadas </p> 
