Modificacion de index

--- a/index.html
+++ b/index.html
@@ -194,63 +194,48 @@
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="course-item">
-              <img src="assets/img/course-1.png" class="img-fluid" alt="...">
-              <div class="course-content">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                  <h4>Conceptos</h4>
-                </div>
-
-                <h3><a href="intro-derivadas.html">Introducción a las derivadas</a></h3>
-                <div class="trainer d-flex justify-content-between align-items-center">
-                  <div class="trainer-rank d-flex align-items-center">
-                    <i class="bx bx-user"></i>&nbsp;50
-                    &nbsp;&nbsp;
-                    <i class="bx bx-heart"></i>&nbsp;65
+            <a href="intro-derivadas.html">
+              <div class="course-item">
+                <img src="assets/img/course-1.png" class="img-fluid" alt="...">
+                <div class="course-content">
+                  <div class="d-flex justify-content-between align-items-center mb-3">
+                    <h4>Conceptos</h4>
                   </div>
+
+                  <h3>Introducción a las derivadas</h3>
                 </div>
               </div>
-            </div>
+            </a>
           </div> <!-- End Course Item-->
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-            <div class="course-item">
-              <img src="assets/img/course-3.png" class="img-fluid" alt="...">
-              <div class="course-content">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                  <h4>Conceptos</h4>
-                </div>
-                <h3><a href="derivadas-constante.html">Derivadas de una constante</a></h3>
-                <p></p>
-                <div class="trainer d-flex justify-content-between align-items-center">
-                  <div class="trainer-rank d-flex align-items-center">
-                    <i class="bx bx-user"></i>&nbsp;35
-                    &nbsp;&nbsp;
-                    <i class="bx bx-heart"></i>&nbsp;42
+            <a href="derivadas-constante.html">
+              <div class="course-item">
+                <img src="assets/img/course-3.png" class="img-fluid" alt="...">
+                <div class="course-content">
+                  <div class="d-flex justify-content-between align-items-center mb-3">
+                    <h4>Conceptos</h4>
                   </div>
+                  <h3>Derivadas de una constante</h3>
+                  <p></p>
                 </div>
               </div>
-            </div>
+            </a>
           </div> <!-- End Course Item-->
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-            <div class="course-item">
-              <img src="assets/img/course-4.png" class="img-fluid" alt="...">
-              <div class="course-content">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                  <h4>Conceptos</h4>
-                </div>
-                <h3><a href="derivadas-funcionlineal.html">Derivadas de una funcion lineal</a></h3>
-                <p></p>
-                <div class="trainer d-flex justify-content-between align-items-center">
-                  <div class="trainer-rank d-flex align-items-center">
-                    <i class="bx bx-user"></i>&nbsp;20
-                    &nbsp;&nbsp;
-                    <i class="bx bx-heart"></i>&nbsp;85
+            <a href="derivadas-funcionlineal.html">
+              <div class="course-item">
+                <img src="assets/img/course-4.png" class="img-fluid" alt="...">
+                <div class="course-content">
+                  <div class="d-flex justify-content-between align-items-center mb-3">
+                    <h4>Conceptos</h4>
                   </div>
+                  <h3>Derivadas de una funcion lineal</h3>
+                  <p></p>
                 </div>
               </div>
-            </div>
+            </a>
           </div> <!-- End Course Item-->
 
         </div>
