--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           <li><a href="about.html">Nosotros</a></li>
           <li><a href="courses.html">Temas</a></li>
           <li><a href="test.html">Tests</a></li>
+          <li><a href="calculadora.html">Calculadora</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -254,7 +255,7 @@
         <li class="nav-item"><a href="about.html" class="nav-link px-2 text-secondary">Nosotros</a></li>
         <li class="nav-item"><a href="courses.html" class="nav-link px-2 text-secondary">Temas</a></li>
         <li class="nav-item"><a href="tests.html" class="nav-link px-2 text-secondary">Tests</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Calculadora</a></li>
+        <li class="nav-item"><a href="calculadora.html" class="nav-link px-2 text-secondary">Calculadora</a></li>
       </ul>
       <p class="text-center text-body-secondary border-bottom pb-3 mb-3"> &copy; Aprende Derivadas </p> 
       <p class="text-center text-body-secondary">UNEFA NUCLEO APURE</p>
