--- a/calculadora.html
+++ b/calculadora.html
@@ -142,7 +142,7 @@
         white-space: pre-line;
       }
     </style>
-    <div class="container py-5">
+    <div class="container p-2">
       <div
         class="calculadora p-4 rounded-4 mx-auto shadow text-center text-white position-relative"
         style="max-width: 400px; background-color: #232c43"
@@ -163,7 +163,7 @@
         >
           <span>?</span>
         </button>
-        <div class="input-group mb-4 derive-input">
+        <div class="input-group mb-2 derive-input">
           <span class="input-group-text">f(x) = </span>
           <input type="text" id="derive-input" value="" class="form-control" />
           <button class="btn" id="derive-button">Calc.</button>
@@ -281,12 +281,9 @@
             <span id="derive-output" class="fs-5 link-info"></span>
           </p>
         </div>
+        <a href="index.html" class="btn btn-primary mt-4">Volver al sitio principal</a>
       </div>
     </div>
-    <br />
-    <br />
-    <br />
-    <br />
     <!--
     <p>Supported operators: +, -, *, /, ^.</p>
     <p>
