--- a/courses.html
+++ b/courses.html
@@ -157,7 +157,7 @@
                   <div class="d-flex justify-content-between align-items-center mb-3">
                     <h4>Conceptos</h4>
                   </div>
-                  <h3>Derivada de una función logarítmica</h3>
+                  <h3>Derivadas de una función logarítmica</h3>
                 </div>
               </div>
             </a>
