--- a/derivadas-funcionlineal.html
+++ b/derivadas-funcionlineal.html
@@ -68,9 +68,10 @@
     <section id="course-details" class="course-details">
       <div class="container" data-aos="fade-up">
 
-        <div class="row">
-          <br class="col-lg-8">
-          <img src="assets/img/course-4.png" class="img-fluid" alt="...">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+           <img src="assets/img/course-4.png" class="img-fluid" alt="...">
+          </div>
           <h3>Derivadas de una función lineal</h3>
 
             <p> &nbsp;&nbsp;&nbsp; La derivada de una función lineal es el coeficiente del término de primer grado, es decir, la derivada de una función lineal f(x)=Ax+B es igual a A. </p>
