--- a/derivadas-logaritmicas.html
+++ b/derivadas-logaritmicas.html
@@ -60,7 +60,7 @@
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs" data-aos="fade-in">
       <div class="container">
-        <h2>Derivada de una función logarítmica</h2>
+        <h2>Derivadas de una función logarítmica</h2>
       </div>
     </div><!-- End Breadcrumbs -->
 
@@ -84,7 +84,7 @@
                     <path d="M9.7 17l4.6 0"></path>
                  </svg>¿Sabías qué?
                 </h6>
-                <p class="text-white"></p>
+                <p class="text-white">La derivación constituye una de las operaciones de mayor importancia cuando tratamos de funciones reales de variable real puesto que nos indica la tasa de variación de la función en un instante determinado o para un valor determinado de la variable, si ésta no es el tiempo.</p>
               </div>
             </div>
           </div>
