--- a/derivadas-potencia.html
+++ b/derivadas-potencia.html
@@ -84,8 +84,7 @@
                     <path d="M9.7 17l4.6 0"></path>
                  </svg>¿Sabías qué?
                 </h6>
-                <p class="text-white">
-                </p>
+                <p class="text-white"> La derivada surge al pretender determinar la inclinación de la tangente a una curva en un punto de ella, y al dar sentido matemático al concepto de velocidad instantánea.</p>
               </div>
             </div>
           </div>
