--- a/index.html
+++ b/index.html
@@ -122,14 +122,15 @@
         <div class="row counters">
 
           <div class="col-lg-6 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Estudiantes</p>
-          </div>
-
-          <div class="col-lg-6 col-6 text-center">
             <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
             <p>Temas</p>
           </div>
+          <div class="col-lg-6 col-6 text-center">
+            <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Test</p>
+          </div>
+
+          
         </div>
 
       </div>
