--- a/intro-derivadas.html
+++ b/intro-derivadas.html
@@ -69,9 +69,10 @@
     <section id="course-details" class="course-details">
       <div class="container" data-aos="fade-up">
 
-        <div class="row">
-          <br class="col-lg-8">
-          <img src="assets/img/course-1.png" class="img-fluid" alt="...">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <img src="assets/img/course-1.png" class="img-fluid" alt="...">
+          </div>
           <h3>Introduccion a las derivadas</h3>
           <p>&nbsp; &nbsp;La derivada juega un papel central en el cálculo del primer semestre porque proporciona información importante sobre una función. Pensando gráficamente, por ejemplo, la derivada en un punto nos dice la pendiente de la línea tangente a la gráfica en ese punto. Además, la derivada en un punto también proporciona la tasa instantánea de cambio de la función con respecto a los cambios en la variable independiente.</p>
             <p> &nbsp;&nbsp;&nbsp; El concepto se aplica en los casos donde es necesario medir la rapidez con que se produce el cambio de una situación. Por ello es una herramienta de cálculo fundamental en los estudios de Física, Química y Biología.
@@ -180,6 +181,9 @@
 
       </div>
     </section><!-- End concept Section -->
+    <div class="d-flex justify-content-center">
+     <a href="assets/descargas/tabla-derivadas.pdf" download="tabla-derivadas.pdf" class="btn btn-primary mt-4" class="boton-descarga">Descargar la tabla de derivadas</a>
+     </div>
 
   </main><!-- End #main -->
 
