--- a/test-5.html
+++ b/test-5.html
@@ -64,6 +64,7 @@
               <div class="pb-4">
                 <div class="start-screen">
                   <button id="start-button">Iniciar</button>
+                  <a href="index.html" class="btn btn-outline-primary mt-4">Volver al sitio principal</a>
                 </div>
                 <div id="display-container">
                   <div class="header">
@@ -72,7 +73,7 @@
                     </div>
                     <div class="timer-div">
                       <img src="assets/img/timer-icon.svg" />
-                      <span class="time-left">15s</span>
+                      <span class="time-left">30s</span>
                     </div>
                   </div>
                   <div id="container">
