--- a/derivadas-parciales.html
+++ b/derivadas-parciales.html
@@ -82,7 +82,7 @@
                   <path d="M9.7 17l4.6 0"></path>
                </svg>Dato Importante
               </h6>
-              <p class="text-white">Hay que tener claro que cuando derivamos con respecto a "X", la "Y" se comporta como un número.</p>
+              <p class="text-white">&nbsp;&nbsp;Hay que tener claro que cuando derivamos con respecto a "X", la "Y" se comporta como un número.</p>
               <h6 class="text-warning">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bulb" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#ffc107" fill="none" stroke-linecap="round" stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -91,7 +91,7 @@
                   <path d="M9.7 17l4.6 0"></path>
                </svg>¿Sabías qué?
               </h6>
-              <p class="text-white">El (0) es el signo numérico de valor nulo, que en notación posicional ocupa los lugares donde no hay otra cifra significativa.</p>
+              <p class="text-white">&nbsp;&nbsp;El (0) es el signo numérico de valor nulo, que en notación posicional ocupa los lugares donde no hay otra cifra significativa.</p>
             </div>
           </div>
             <h3>Derivadas Parciales</h3>
@@ -306,7 +306,7 @@
   <!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="derivadas-constante.html" class="back-to-top d-flex align-items-center justify-content-center" title="Siguiente tema"><i class="bi bi-arrow-right-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
