--- a/test-1.html
+++ b/test-1.html
@@ -31,7 +31,7 @@
             <div class="card-body d-flex flex-column align-items-center">
               <div class="row d-flex justify-content-center">
                 <div class="col-md-4">
-                  <img src="assets/img/test/test-1.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/test/test-1.png" class="img-fluid" alt="">
                 </div>
               </div>
               <h2 class="card-title my-4 text-center">Nivel 1 - Introducción a las derivadas</h2>
