--- a/about.html
+++ b/about.html
@@ -70,8 +70,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/Aprende.png
-            " class="img-fluid" alt="">
+            <img src="assets/img/Aprende.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Somos estudiantes de la carrera Ingeniería de Sistemas en la UNEFA Núcleo Apure.</h3>
