--- a/derivadas-constante.html
+++ b/derivadas-constante.html
@@ -84,7 +84,7 @@
                     <path d="M9.7 17l4.6 0"></path>
                  </svg>¿Sabías qué?
                 </h6>
-                <p class="text-white">La derivada de una constante es cero.</p>
+                <p class="text-white">&nbsp;&nbsp;La derivada de una constante es cero.</p>
                 <h6 class="text-warning">
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bulb" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#ffc107" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -93,7 +93,7 @@
                     <path d="M9.7 17l4.6 0"></path>
                  </svg>¿Sabías cómo se expresa la derivada?
                 </h6>
-                <p class="text-white">En la notación de Lagrange, la derivada de f se expresa como f′ (se pronuncia "f prima”). Esta notación es probablemente la más común cuando se trabaja con funciones de una variable.</p>
+                <p class="text-white">&nbsp;&nbsp;En la notación de Lagrange, la derivada de f se expresa como f′ (se pronuncia "f prima”). Esta notación es probablemente la más común cuando se trabaja con funciones de una variable.</p>
               </div>
             </div>
           </div>
@@ -161,7 +161,7 @@
   <!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="derivadas-potencia.html" class="back-to-top d-flex align-items-center justify-content-center" title="Siguiente tema"><i class="bi bi-arrow-right-short" ></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
