--- a/derivadas-logaritmicas.html
+++ b/derivadas-logaritmicas.html
@@ -84,7 +84,7 @@
                     <path d="M9.7 17l4.6 0"></path>
                  </svg>¿Sabías qué?
                 </h6>
-                <p class="text-white">La derivación constituye una de las operaciones de mayor importancia cuando tratamos de funciones reales de variable real puesto que nos indica la tasa de variación de la función en un instante determinado o para un valor determinado de la variable, si ésta no es el tiempo.</p>
+                <p class="text-white">&nbsp;&nbsp;La derivación constituye una de las operaciones de mayor importancia cuando tratamos de funciones reales de variable real puesto que nos indica la tasa de variación de la función en un instante determinado o para un valor determinado de la variable, si ésta no es el tiempo.</p>
               </div>
             </div>
           </div>
@@ -162,7 +162,7 @@
   <!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="derivadas-trigonometricas.html" class="back-to-top d-flex align-items-center justify-content-center" title="Siguiente tema"><i class="bi bi-arrow-right-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
