--- a/derivadas-raiz.html
+++ b/derivadas-raiz.html
@@ -84,7 +84,7 @@
                     <path d="M9.7 17l4.6 0"></path>
                  </svg>¿Sabías qué?
                 </h6>
-                <p class="text-white">La noción de derivada surge al pretender determinar la inclinación de la tangente a una curva en un punto de ella, y al dar sentido matemático al concepto de velocidad instantánea.
+                <p class="text-white">&nbsp;&nbsp;La noción de derivada surge al pretender determinar la inclinación de la tangente a una curva en un punto de ella, y al dar sentido matemático al concepto de velocidad instantánea.
                 </div>
             </div>
           </div>
@@ -192,7 +192,7 @@
   <!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="derivadas-logaritmicas.html" class="back-to-top d-flex align-items-center justify-content-center" title="Siguiente tema"><i class="bi bi-arrow-right-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
