--- a/derivadas-trigonometricas.html
+++ b/derivadas-trigonometricas.html
@@ -175,7 +175,7 @@
   <!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="derivadas-parciales.html" class="back-to-top d-flex align-items-center justify-content-center" title="Siguiente tema"><i class="bi bi-arrow-right-short""></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
