--- a/test-2.html
+++ b/test-2.html
@@ -31,7 +31,7 @@
             <div class="card-body d-flex flex-column">
               <div class="row d-flex justify-content-center">
                 <div class="col-md-4">
-                  <img src="assets/img/test/test-2.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/test/test-2.png" class="img-fluid" alt="">
                 </div>
               </div>
               <h2 class="card-title my-4 text-center">Nivel 2 - Derivadas de una constante</h2>
