--- a/test-5.html
+++ b/test-5.html
@@ -51,11 +51,7 @@
             <div class="card-body d-flex flex-column">
               <div class="row d-flex justify-content-center">
                 <div class="col-md-4">
-                  <img
-                    src="assets/img/test/test-4.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
+                  <img src="assets/img/test/test-5.jpg" class="img-fluid" alt="">
                 </div>
               </div>
               <h2 class="card-title my-4 text-center">
