--- a/test.html
+++ b/test.html
@@ -77,7 +77,7 @@
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">Derivadas parciales</h5>
-                      <p class="card-text">Eres todo un maestro, estás preparado para el siguiente nivel?</p>
+                      <p class="card-text">Eres todo un maestro, estás preparado para el siguiente nivel.</p>
                       <a href="test-4.html" class="btn btn-outline-primary">Hacer test</a>
                     </div>
                   </div>
