--- a/test-2.html
+++ b/test-2.html
@@ -47,11 +47,14 @@
                     </div>
                     <div class="timer-div">
                       <img src="assets/img/timer-icon.svg" />
-                      <span class="time-left">30s</span>
+                      <span class="time-left">45s</span>
                     </div>
                   </div>
                   <div id="container">
                     <!-- questions and options will be displayed here -->
+                  </div>
+                  <div id="restart-alert" class="pt-4 text-center d-none">
+                    <h5>El test se reiniciará en <span>5s</span> ...</h5>
                   </div>
                   <button id="next-button" class="btn btn-primary disabled">Siguiente</button>
                 </div>
