--- a/test-1.html
+++ b/test-1.html
@@ -53,6 +53,9 @@
                   <div id="container">
                     <!-- questions and options will be displayed here -->
                   </div>
+                  <div id="restart-alert" class="pt-4 text-center d-none">
+                    <h5>El test se reiniciará en <span>5s</span> ...</h5>
+                  </div>
                   <button id="next-button" class="btn btn-primary disabled">Siguiente</button>
                 </div>
                 <div class="score-container hide">
