--- a/test-4.html
+++ b/test-4.html
@@ -47,17 +47,21 @@
                     </div>
                     <div class="timer-div">
                       <img src="assets/img/timer-icon.svg" />
-                      <span class="time-left">30s</span>
+                      <span class="time-left">45s</span>
                     </div>
                   </div>
                   <div id="container">
                     <!-- questions and options will be displayed here -->
+                  </div>
+                  <div id="restart-alert" class="pt-4 text-center d-none">
+                    <h5>El test se reiniciará en <span>5s</span> ...</h5>
                   </div>
                   <button id="next-button" class="btn btn-primary disabled">Siguiente</button>
                 </div>
                 <div class="score-container hide">
                   <div id="user-score">Puntaje</div>
                   <button id="restart">Reiniciar</button>
+                  <a href="test-5.html" class="mt-3">Ir al siguiente test</a>
                   <a href="index.html" class="mt-3">Volver al sitio principal</a>
                 </div>
               </div>
